--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,19 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Maven Compiled Results
+target/
+
+# VSCode Eclipse IntelliJ
+*.project
+*.classpath
+*.iml
+.settings/
+.idea/
+.vscode/
+
+# Terraform
+*.tfstate
+*.tfstate.backup
+.terraform/
