--- a/terraform-spring-boot-samples/raw-client-library-sample/pom.xml
+++ b/terraform-spring-boot-samples/raw-client-library-sample/pom.xml
@@ -1,12 +1,13 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.microsoft.terraform</groupId>
-  <artifactId>terraform-spring-boot-solution</artifactId>
+  <groupId>com.microsoft.terraform.samples</groupId>
+  <artifactId>terraform-raw-client-lib</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>pom</packaging>
+  <packaging>jar</packaging>
 
-  <name>Terraform Spring Boot solution</name>
+  <name>Using raw Terraform client library sample</name>
   <url>https://github.com/Microsoft/terraform-spring-boot</url>
 
   <properties>
@@ -40,10 +41,24 @@
     </developer>
   </developers>
 
-  <modules>
-    <module>terraform-client</module>
-    <module>terraform-spring-boot-autoconfigure</module>
-    <module>terraform-spring-boot-starter</module>
-    <module>terraform-spring-boot-samples</module>
-  </modules>
+  <dependencies>
+    <dependency>
+      <groupId>com.microsoft.terraform</groupId>
+      <artifactId>terraform-client</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+  </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.7.0</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
