--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>com.microsoft.terraform</groupId>
   <artifactId>terraform-spring-boot-solution</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <packaging>pom</packaging>
 
   <name>Terraform Spring Boot solution</name>
