--- a/terraform-spring-boot-samples/pom.xml
+++ b/terraform-spring-boot-samples/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>com.microsoft.terraform.samples</groupId>
   <artifactId>terraform-spring-boot-samples-solution</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <packaging>pom</packaging>
 
   <name>Terraform Spring Boot samples solution</name>
