--- a/terraform-spring-boot-samples/raw-client-library-sample/pom.xml
+++ b/terraform-spring-boot-samples/raw-client-library-sample/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.microsoft.terraform.samples</groupId>
   <artifactId>terraform-raw-client-lib</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <packaging>jar</packaging>
 
   <name>Using raw Terraform client library sample</name>
@@ -45,7 +45,7 @@
     <dependency>
       <groupId>com.microsoft.terraform</groupId>
       <artifactId>terraform-client</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>1.0.0</version>
     </dependency>
   </dependencies>
 
