--- a/terraform-spring-boot-samples/spring-starter-sample/pom.xml
+++ b/terraform-spring-boot-samples/spring-starter-sample/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.microsoft.terraform.samples</groupId>
   <artifactId>terraform-spring-starter</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <packaging>jar</packaging>
 
   <name>Terraform Spring Boot Starter Sample App</name>
@@ -51,7 +51,7 @@
     <dependency>
       <groupId>com.microsoft.terraform</groupId>
       <artifactId>terraform-spring-boot-starter</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>1.0.0</version>
     </dependency>
   </dependencies>
 
