--- a/terraform-spring-boot-starter/pom.xml
+++ b/terraform-spring-boot-starter/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>com.microsoft.terraform</groupId>
   <artifactId>terraform-spring-boot-starter</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0.0</version>
 
   <name>Terraform Spring Boot Starter</name>
   <url>https://github.com/Microsoft/terraform-spring-boot</url>
@@ -37,7 +37,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <azterraform.version>1.0-SNAPSHOT</azterraform.version>
+    <azterraform.version>1.0.0</azterraform.version>
     <springboot.version>1.5.10.RELEASE</springboot.version>
   </properties>
 
@@ -50,7 +50,7 @@
 
     <dependency>
       <groupId>com.microsoft.terraform</groupId>
-      <artifactId>terraform-spring-boot</artifactId>
+      <artifactId>terraform-spring-boot-autoconfigure</artifactId>
       <version>${azterraform.version}</version>
     </dependency>
 
